# MandelbrotCUDA

./: .gitignore  CMakeLists.txt  FindSFML.cmake  README.md  Viewport.h  build.ps1  gpu_detector.cpp  gpu_detector.h  install_sfml.ps1  main.cpp  mandelbrot_cpu.cpp  mandelbrot_cpu.h  mandelbrot_cuda.cu  renderer_sfml.cpp  renderer_sfml.h
